[project]
name = "tableau-dimension-mapper"
version = "0.1.0"
description = "A MCP server for remapping dimensions in Tableau workbooks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "python-dotenv>=1.0.1",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "pandas>=2.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
tableau-dimension-mapper = "tableau_dimension_mapper:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tableau_dimension_mapper"] 